# project_autocopy

./: .gitignore  Cargo.toml  README.md  architecture.md  clippy.toml  rustfmt.toml  specs.md
.github/workflows/: ci.yaml  ci.yml
src/: backup.rs  backup_runner.rs  config.rs  copy.rs  error.rs  lib.rs  main.rs  scheduler.rs  theme.rs  ui.rs  version_manager.rs
src/ui/: app.rs  components.rs  mod.rs  state.rs
src/ui/panels/: dialogs.rs  header.rs  messages.rs  mod.rs  path_panel.rs  progress_panel.rs  schedule_panel.rs  status_bar.rs  versions_panel.rs
tests/: integration_test.rs
