[package]
name = "autocopy"
version = "0.1.0"
edition = "2021"
description = "Backup tool with versioning and GUI for Windows"
keywords = ["backup", "versioning", "egui", "windows"]
repository = "https://github.com/example/autocopy"
authors = ["Author <author@example.com>"]
license = "MIT"

[dependencies]
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
rfd = "0.14"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
sysinfo = "0.30"
windows = { version = "0.58", features = ["Win32_System_TaskScheduler", "Win32_Foundation", "Win32_System_Com", "Win32_System_Ole"] }

tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
